adding and editing

--- a/index.html
+++ b/index.html
@@ -23,11 +23,18 @@
         <h2 id="question-title"></h2>
         <div class="choices" id="choices"></div>
       </div>
+      <h3 id="timer">Time: 75</h3>
+
       <div class="hide" id="endscreen">
         <h2>All Done</h2>
+        <h4 id="msgScore">Your final score is</h4>
+        <label for="YourInitials">Enter initials</label>
+        <input type="text" name="YourInitials" id="Initials" />
+        <button id="end-btn"></button>
       </div>
     </div>
 
     <script src="./assets/js/logic.js"></script>
+    <script src="./assets/js/scores.js"></script>
   </body>
 </html>
