--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       </div>
     </div>
 
-    <script src="./assets/js/logic.js"></script>
-    <script src="./assets/js/scores.js"></script>
+    <script src="./assets/js/questions.js"></script>
+    <script src="./assets/js/time.js"></script>
   </body>
 </html>
