--- a/highscore.html
+++ b/highscore.html
@@ -4,9 +4,13 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>High Score</title>
+    <title>Highscore</title>
   </head>
   <body>
+    <button type="button" class="btn btn-primary" id="btnBack">Go Back</button>
+    <button type="button" class="btn btn-primary" id="btnClear">
+      Clear Highscores
+    </button>
     <div id="class"></div>
   </body>
 </html>
