--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
         <h2 id="question-title"></h2>
         <div class="choices" id="choices"></div>
       </div>
-      <h3 id="timer">Time: 75</h3>
+      <h5 id="timer">Time: 75</h5>
+      <h6 id="highscore"><a href="./highscore.html">View Highscores</a></h6>
 
       <div class="hide" id="endscreen">
         <h2>All Done</h2>
