--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
   <body>
     <div class="container">
       <div class="start" id="start">
+        <span id="highscore"
+          ><a href="./highscore.html">View Highscores</a></span
+        >
+        <span id="timer">Timer: 75</span>
+
         <h1>Coding Quiz Challange</h1>
         <p>
           Try to answer the following code related questions within the time
@@ -23,8 +28,6 @@
         <h2 id="question-title"></h2>
         <div class="choices" id="choices"></div>
       </div>
-      <h5 id="timer">Time: 75</h5>
-      <h6 id="highscore"><a href="./highscore.html">View Highscores</a></h6>
 
       <div class="hide" id="endscreen">
         <h2>All Done</h2>
