--- a/index.html
+++ b/index.html
@@ -39,6 +39,6 @@
     </div>
 
     <script src="./assets/js/questions.js"></script>
-    <script src="./assets/js/time.js"></script>
+    <script src="./assets/js/scores.js"></script>
   </body>
 </html>
